Add v3 certificate registration and route state changes through the state machine (#1681)